--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h1>Choose a Video Encoding Format</h1>
     <ul>
         <li><a href="av1.html">Play AV1 Video</a></li>
-        <li><a href="avc.html">Play AVC (H.264) Video</a></li>
+        <li><a href="h264.html">Play AVC (H.264) Video</a></li>
         <li><a href="h263.html">Play H.263 Video</a></li>
         <li><a href="hevc.html">Play HEVC (H.265) Video</a></li>
         <li><a href="mp4v-es.html">Play MP4V-ES Video</a></li>
