--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li><a href="av1.html">Play AV1 Video</a></li>
         <li><a href="h264.html">Play AVC (H.264) Video</a></li>
         <li><a href="h263.html">Play H.263 Video</a></li>
-        <li><a href="hevc.html">Play HEVC (H.265) Video</a></li>
+        <li><a href="hevc_h265.html">Play HEVC (H.265) Video</a></li>
         <li><a href="mp4v-es.html">Play MP4V-ES Video</a></li>
         <li><a href="mpeg1.html">Play MPEG-1 Video</a></li>
         <li><a href="mpeg2.html">Play MPEG-2 Video</a></li>
