--- a/hevc_h265.html
+++ b/hevc_h265.html
@@ -8,7 +8,7 @@
 <body>
     <h1>HEVC (H.265) Video</h1>
     <video controls width="720">
-        <source src="video-hevc-h265.mp4" type="video/mp4">
+        <source src="video-hevc-h265.mp4" type="video/mp4; codecs='hvc1'">
         Your browser does not support the HEVC video format.
     </video>
     <p><a href="index.html">Back to main page</a></p>
