--- a/index.html
+++ b/index.html
@@ -44,5 +44,9 @@
         <li><a href="vp8.html">Play VP8 Video</a></li>
         <li><a href="vp9.html">Play VP9 Video</a></li>
     </ul>
+
+    <h1>
+    <a href="https://tools.woolyss.com/html5-audio-video-tester">### Also try this page ###</a>
+    </h1>
 </body>
 </html>
